# Lanchain-Understanding

./: .env.example  pyproject.toml
1. Models/2.ChatModel/: cahtmodel.ipynb  hugging.ipynb
3. Messages/: 2. chatprompttemplate.ipynb
4. Example Chatbot/: chatbot.ipynb
5. Structured Output/: 1. with_structured_output.ipynb
Learning/1. Models/1.LLM/: 1.ipynb
Learning/1. Models/3.Embedding Models/: embedding.ipynb
Learning/2. Prompts/: 1. static_prompts.ipynb  2. prompt_template.ipynb  prompt_template.json  prompt_template.yaml
Learning/3. Messages/: 1. messages.ipynb
Learning/5. Structured Output/: 2. outputparser.ipynb
Learning/7.Runnables/: 1.runnables.ipynb
