[project]
name = "Langchain_Project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "huggingface-hub>=0.36.2",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-core>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "transformers>=4.57.6",
]
